# crypto-signal-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  main.py  pyproject.toml  run_monitor.sh
crypto_signal_agent/: __init__.py  cli.py  config.py  diagnostics.py  http_client.py  listing_monitor.py  models.py  pipeline.py  presentation.py  scanner.py
crypto_signal_agent/alerts/: telegram.py
crypto_signal_agent/analysis/: __init__.py  decision.py  llm_analyst.py  risk_engine.py  scoring.py
crypto_signal_agent/collectors/: __init__.py  binance.py  bybit.py  venues.py
crypto_signal_agent/storage/: sqlite_store.py
deploy/: GITHUB_BOTHOST_DEPLOY_RU.md  SERVER_DEPLOY_RU.md  crypto-signal-agent.service.template  install_systemd.sh  make_deploy_archive.sh  upload_to_server.sh
outputs/: crypto_openai_agent_mvp_spec.md
tests/: __init__.py  test_scoring_and_risk.py
